--- a/test/config/fourier_features.yaml
+++ b/test/config/fourier_features.yaml
@@ -12,7 +12,7 @@ functa:
 
 data:
   dir: /data/serrano/airfrans/
-  data_to_encode: sdf
+  data_to_encode: vx
   sample: mesh
   task: full
   score: 0 
@@ -26,7 +26,7 @@ optim:
   lr_inr : 5e-5
   lr_code : 0.01
   lr_encoder: 1e-3
-  meta_lr_code : 0
+  meta_lr_code : 5e-5
   weight_decay_code: 0
   inner_steps : 3
   test_inner_steps : 3
@@ -34,17 +34,18 @@ optim:
   weight_decay: 0
 
 inr:
-  model_type : "siren"
-  latent_dim : 128
-  depth : 5
-  hidden_dim : 128
-  w0 : 5
-  use_latent: True
+  model_type : "fourier_features"
+  include_input: False
+  latent_dim : 256
+  depth : 6
+  hidden_dim : 256
+  num_frequencies : 32
   modulate_scale: False
   modulate_shift: True
-  hypernet_depth: 1
-  hypernet_width: 128
-  last_activation: 
+  frequency_embedding: nerf
+  max_frequencies: 10
+  base_frequency: 2
+  scale : 5
   loss_type: "mse"
 
 wandb:
